force-app/main/default/objects/Demand__c/fields/PTP_Date_1__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date_1__c</fullName>
    <label>PTP Date 1</label>
    <type>Date</type>
</CustomField>