force-app/main/default/objects/Demand__c/fields/PTP_Date_3__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date_3__c</fullName>
    <label>PTP Date 3</label>
    <type>Date</type>
</CustomField>