force-app/main/default/objects/Demand__c/fields/Registration_Charges_Balance__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges_Balance__c</fullName>
    <formula>Registration_Charges_Demanded_New__c -  Registration_Charges_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Charges Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>