force-app/main/default/objects/Demand__c/fields/Registration_Charges_Paid__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charges_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registration Charges Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>