force-app/main/default/objects/Demand__c/fields/Reminder_Notice1__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Notice1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Notice1</label>
    <type>Checkbox</type>
</CustomField>