force-app/main/default/objects/Demand__c/fields/Reminder_Sent_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_Date_2__c</fullName>
    <label>Reminder Sent Date 2</label>
    <type>Date</type>
</CustomField>