force-app/main/default/objects/Demand__c/fields/Send_Mail__c.field-meta.xml
<CustomField>
    <fullName>Send_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Mail</label>
    <type>Checkbox</type>
</CustomField>