force-app/main/default/objects/Demand__c/fields/Service_Tax_on_Agreement_Value_Balance__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_on_Agreement_Value_Balance__c</fullName>
    <formula>Service_Tax_on_Agreement_Value_Demanded__c -  Service_Tax_on_Agreement_Value_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT on Agreement Value Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>