force-app/main/default/objects/Demand__c/fields/Service_Tax_on_Agreement_Value_Paid__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_on_Agreement_Value_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT on Agreement Value Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>