force-app/main/default/objects/Demand__c/fields/Tax_On_Interest_On_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_On_Interest_On_Balance_Amount__c</fullName>
    <formula>Interest_Charges__c  * 0.18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT On Interest On Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>