force-app/main/default/objects/Demand__c/fields/Tax_On_Interest_On_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_On_Interest_On_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAT On Interest On Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>