force-app/main/default/objects/Demand__c/fields/Tax_on_Total_Interest_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Tax_on_Total_Interest_Amount_Due__c</fullName>
    <formula>Tax_On_Interest_On_Balance_Amount__c + Tax_On_Interest_On_Paid_Amount__c - (Total_Interest_Tax_Paid__c + Total_Interest_Tax_Waived__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT on Total Interest Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>