force-app/main/default/objects/Demand__c/fields/Total_Amount_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Total Amount Account (Credit)</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>