force-app/main/default/objects/Demand__c/fields/Total_Amount_with_Tax_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Tax_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Total Amount with VAT Account (Debit)</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Demands (Total Amount with Tax Account)</relationshipLabel>
    <relationshipName>Demands1</relationshipName>
    <type>Lookup</type>
</CustomField>