force-app/main/default/objects/Demand__c/fields/Total_Amount_with_Tax_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Tax_Demanded__c</fullName>
    <formula>Total_Amount_Demanded__c + Total_Tax_Demanded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount with VAT Demanded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>