force-app/main/default/objects/Demand__c/fields/Total_Interest_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount_Due__c</fullName>
    <formula>IF(Milestone_Name__c == &apos;Late Payment Charges&apos;,( Debit_Demanded__c +Debit_Tax_Demanded__c), (Interest_On_Paid_Amount__c + Interest_on_Balance_Amount__c -  (Total_Interest_Amount_Paid__c  +  Total_Interest_Amount_Waived__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>