force-app/main/default/objects/Demand__c/fields/Total_Other_Charges_Tax_Balance_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges_Tax_Balance_New__c</fullName>
    <formula>Total_Other_Charges_Tax_Demanded_New__c - Total_Other_Charges_Tax_Paid_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Charges Tax Balance (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>