force-app/main/default/objects/Demand__c/fields/Total_Other_Charges_Tax_Demanded_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Charges_Tax_Demanded_New__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Other Charges Tax Demanded (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>