force-app/main/default/objects/Demand__c/fields/Total_Society_Charges_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Society_Charges_Balance__c</fullName>
    <formula>Total_Society_Charges_Demanded__c - Total_Society_Charges_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Society Charges Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>