force-app/main/default/objects/Demand__c/fields/Total_Tax_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Total VAT Account (Credit)</label>
    <referenceTo>Account_Master__c</referenceTo>
    <relationshipLabel>Demands (Total VAT Account (Credit))</relationshipLabel>
    <relationshipName>Demands2</relationshipName>
    <type>Lookup</type>
</CustomField>