force-app/main/default/objects/Demand__c/fields/Total_tax_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_tax_paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total VAT Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>