force-app/main/default/objects/Demand__c/fields/View_Demand__c.field-meta.xml
<CustomField>
    <fullName>View_Demand__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+AttachmentId__c, &apos;View&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Demand</label>
    <type>Text</type>
</CustomField>