force-app/main/default/objects/Demand__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <formula>TEXT(YEAR(Today())) &amp; &apos;/&apos; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Number</label>
    <type>Text</type>
</CustomField>