force-app/main/default/objects/Demand__c/fields/Xpedeon_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Doc_Type__c</fullName>
    <label>Xpedeon Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASI</fullName>
            </value>
            <value>
                <fullName>DLDI</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>