force-app/main/default/objects/Demand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Debit_Type__c</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Is_Group_Demand__c</columns>
    <columns>View_Demand__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Demand_Status__c</field>
        <operation>equals</operation>
        <value>Reversed</value>
    </filters>
    <filters>
        <field>Total_Amount_Account__c</field>
        <operation>contains</operation>
        <value>unearned revenue</value>
    </filters>
    <label>All</label>
</ListView>