force-app/main/default/objects/Demand__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Debit_Type__c</columns>
    <columns>Debit_CGST__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Demand_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Debit_CGST__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>